Reinstate [BinaryFormatter] tests.
The tests were removed in the previous commit because they don't
work under .NET Core/.NET Standard. They are now added back, but
conditionally compiled in for .NET Framework targets.

Ideally [BinaryFormatter] could be removed (and with it the shim
code that was added to the main library), but that is a breaking
change and means we'd have to bump the major version number.

--- a/McSherry.SemanticVersioning.Testing/McSherry.SemanticVersioning.Testing.csproj
+++ b/McSherry.SemanticVersioning.Testing/McSherry.SemanticVersioning.Testing.csproj
@@ -23,4 +23,10 @@
         
         <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
     </ItemGroup>
+    
+    <!-- .NET Framework -->
+    <PropertyGroup Condition=" '$(TargetFramework)' == 'net45' Or
+                               '$(TargetFramework)' == 'net46'">
+        <DefineConstants>NETFW</DefineConstants>
+    </PropertyGroup>
 </Project>
